# libvortex-1.1

./: AUTHORS  ChangeLog  LATEST-VERSION  Makefile.am  Makefile.win  Makefile.win.in  NEWS  README  README-VORTEX-WIN32.txt  TODO  VERSION  autogen.sh  buildrpm.sh  change-prefix.py  config.w32.mk  config.win64.mk  configure.ac  get-python-config  get-version.py  libvortex.sln  outdated-copyright.sh  prepare-nsh.sh  update-changelog.sh  update-def  vortex-1.1-32.nsi  vortex-1.1-64.nsi  vortex-1.1.pc.in  vortex-external-1.1.pc.in  vortex-pull-1.1.pc.in  vortex-sasl-1.1.pc.in  vortex-tls-1.1.pc.in  vortex-tunnel-1.1.pc.in  vortex-xml-rpc-1.1.pc.in
alive/: Makefile.am  (+3 more)
doc/: Makefile.am  af-arch.idl  body-include-file.idl  change-resource.idl  vortex-1.4.3.css  vortex-doc-footer-1.4.3.html  vortex-doc-footer.html  vortex-doc-header.html  vortex-doc.doxygen.in  vortex-draft-ietf-idwg-beep-idxp-07.txt  vortex-status.txt  vortex.css  xml-rpc-gen-doc.xml  xml-rpc-gen.idl
doc/change-notify/: vortex-async-queue-api-01.txt  vortex-conn-opts-01.txt  vortex-ctx-data-01.txt  vortex-inline-dtd-01.txt  vortex-profile-filter-01.txt  vortex-profile-mask-func-01.txt  vortex-voidptr-update-01.txt  vortex-xml-rpc-gen-dispatch-01.txt
doc/release-notes/: Vortex-0.8.11-short.txt  Vortex-0.8.4.txt  Vortex-0.8.5.txt  Vortex-0.8.7.txt  Vortex-1.0.12.txt  Vortex-1.0.13.txt  Vortex-1.0.14.txt  Vortex-1.0.15.txt  Vortex-1.0.16.txt  Vortex-1.0.5.txt  Vortex-1.0.8.txt  Vortex-1.0.9.txt  Vortex-1.0.txt  Vortex-1.1.1.txt  Vortex-1.1.10.txt  Vortex-1.1.12.txt  Vortex-1.1.13.txt  Vortex-1.1.15.txt  Vortex-1.1.16.txt  Vortex-1.1.17.txt  Vortex-1.1.19.txt  Vortex-1.1.2.txt  Vortex-1.1.3.txt  Vortex-1.1.5.txt  Vortex-1.1.6.txt  Vortex-1.1.8.txt  Vortex-1.1.9.txt
lua-vortex/src/: Makefile.am  lua-vortex-alive.c  lua-vortex-alive.h  lua-vortex-asyncqueue.c  lua-vortex-asyncqueue.h  lua-vortex-channel.c  lua-vortex-channel.h  lua-vortex-channelpool.c  lua-vortex-channelpool.h  lua-vortex-connection.c  lua-vortex-connection.h  lua-vortex-ctx.c  lua-vortex-ctx.h  lua-vortex-frame.c  lua-vortex-frame.h  lua-vortex-object.c  lua-vortex-object.h  lua-vortex-private.h  lua-vortex-sasl.c  lua-vortex-sasl.h  lua-vortex-tls.c  lua-vortex-tls.h  lua-vortex.c  lua-vortex.h
pull/: Makefile.am  Makefile.win  libvortex-pull-1.1.def  vortex_pull.c  vortex_pull.h
py-vortex/src/: Makefile.am  alive.py  py_vortex.c  py_vortex.h  py_vortex_alive.c  py_vortex_alive.h  py_vortex_async_queue.c  py_vortex_async_queue.h  py_vortex_channel.c  py_vortex_channel.h  py_vortex_channel_pool.c  py_vortex_channel_pool.h  py_vortex_connection.c  py_vortex_connection.h  py_vortex_ctx.c  py_vortex_ctx.h  py_vortex_frame.c  py_vortex_frame.h  py_vortex_handle.c  py_vortex_handle.h  py_vortex_sasl.c  py_vortex_sasl.h  py_vortex_tls.c  py_vortex_tls.h  sasl.py  setup.py  tls.py
py-vortex/test/: Makefile.am  regtest_common.py  simple-listener.py  suppressions.valgrind  test.crt  vortex-regression-client.py  vortex-regression-listener.py
py-vortex/trunk/1.1/: configure.ac
sasl/: Makefile.am  Makefile.win  libvortex-sasl-1.1.def  vortex-sasl.dtd.h  vortex_sasl.c  vortex_sasl.h
test/: Makefile.am  Makefile.win  mime.example.1.txt  mime.example.2.txt  mime.example.body.1.txt  service_dispatch.h  test-certificate.pem  test-private-key.pem  test_array_itemarray_xml_rpc.c  test_array_itemarray_xml_rpc.h  test_get_array.c  test_get_array.h  test_get_double_sum_double_double.c  test_get_double_sum_double_double.h  test_get_list.c  test_get_list.h  test_get_struct_values_values.c  test_get_struct_values_values.h  test_get_the_bool_1.c  test_get_the_bool_1.h  test_get_the_bool_2.c  test_get_the_bool_2.h  test_get_the_string.c  test_get_the_string.h  test_operate_int_int.c  test_operate_int_int.h  test_struct_item_xml_rpc.c  test_struct_item_xml_rpc.h  test_struct_node_xml_rpc.c  test_struct_node_xml_rpc.h  test_struct_values_xml_rpc.c  test_struct_values_xml_rpc.h  test_sum2_int_int.c  test_sum_int_int.c  test_xml_rpc.c  test_xml_rpc.h  vortex-1seg-timeout-client.c  vortex-client-connections.c  vortex-client-echo.c  vortex-client-without-cbs.c  (+22 more)
tls/: Makefile.am  Makefile.win  libvortex-tls-1.1.def  vortex-digest-tool.c  vortex_tls.c  vortex_tls.h
trunk/libvortex-1.1/: COPYING  Makefile.am  Makefile.win  TODO  VERSION  autogen.sh  buildrpm.sh  change-prefix.py  check-python-dir.py  configure.ac  get-python-site-packages.py  libvortex.sln  vortex-1.1.pc.in  vortex-alive-1.1.pc.in  vortex-http-1.1.pc.in  vortex-pull-1.1.pc.in  vortex-sasl-1.1.pc.in  vortex-tls-1.1.pc.in  vortex-tunnel-1.1.pc.in  vortex-websocket-1.1.pc.in  vortex.pc.in
trunk/libvortex-1.1/alive/: Makefile.am  Makefile.win  libvortex-alive-1.1.def  vortex_alive.c
trunk/libvortex-1.1/data/: Makefile.am  xml-rpc-boot.dtd
trunk/libvortex-1.1/debian/: changelog  control  libvortex-pull-1.1-dev.install  libvortex-sasl-1.1.install  libvortex-tls-1.1-dev.install  libvortex-xml-rpc-1.1.install  python-vortex-dev.install  python-vortex-sasl.install  python-vortex-tls-dev.install  python-vortex.dirs  python-vortex.install
trunk/libvortex-1.1/doc/: Makefile.am  body-include.idl  update-vortex-status.pl  vortex-doc-footer-1.4.3.html  vortex-doc-footer.html  vortex-doc-header-1.4.3.html  vortex-doc-header.html  vortex-doc.doxygen.in  vortex-rfc3080.txt  vortex-rfc3620.txt  vortex.css  xml-rpc-gen-doc.xml  xml-rpc-gen.xdl  xml-rpc-invocation.dia
trunk/libvortex-1.1/freebsd/: buildpackages.sh
xml-rpc-gen/: Makefile.am  Makefile.win  _support.c  _support.h  exarg.c  exarg.h  reg-test01.c  reg-test01.xdl  reg-test02.c  reg-test02.idl  reg-test02.xdl  reg-test03.c  reg-test03.idl  reg-test04.c  reg-test04.idl  reg-test04.xdl  reg-test05.c  reg-test05.idl  reg-test05.xdl  reg-test06.c  reg-test06.idl  reg-test07.c  reg-test07.idl  reg-test08.xdl  xml-rpc-autoconf.c  xml-rpc-autoconf.h  xml-rpc-c-server.c  xml-rpc-c-server.h  xml-rpc-c-stub.c  xml-rpc-c-stub.h  xml-rpc-gen-translate.c  xml-rpc-gen-translate.h  xml-rpc-gen.c  xml-rpc-support.c  xml-rpc-support.h  xml-rpc.dtd.h  xml-rpc.h
(+623 files in other folders)
