if ENABLE_AF_ARCH_DOC
VORTEX_DOC_DIR = doc
endif

if ENABLE_READLINE 
VORTEX_TEST_DIR = test
endif

if ENABLE_XML_RPC_GEN_TOOL
VORTEX_XML_RPC_GEN_TOOL_DIR = xml-rpc-gen
endif

if ENABLE_TUNNEL_SUPPORT
TUNNEL_SUPPORT_DIR = tunnel
TUNNEL_PKGCONFIG = vortex-tunnel-1.1.pc
endif

if ENABLE_PULL_SUPPORT
PULL_SUPPORT_DIR = pull
PULL_PKGCONFIG = vortex-pull-1.1.pc
endif

if ENABLE_XML_RPC_SUPPORT
XML_RPC_SUPPORT_DIR = xml-rpc
XML_RPC_PKGCONFIG = vortex-xml-rpc-1.1.pc
endif

if ENABLE_SASL_SUPPORT
SASL_SUPPORT_DIR = sasl
SASL_PKGCONFIG = vortex-sasl-1.1.pc
endif

if ENABLE_TLS_SUPPORT
TLS_SUPPORT_DIR = tls
TLS_PKGCONFIG = vortex-tls-1.1.pc
endif


SUBDIRS = src $(PULL_SUPPORT_DIR) $(TUNNEL_SUPPORT_DIR) $(XML_RPC_SUPPORT_DIR) $(SASL_SUPPORT_DIR) $(TLS_SUPPORT_DIR) $(VORTEX_TEST_DIR) $(VORTEX_XML_RPC_GEN_TOOL_DIR) $(VORTEX_DOC_DIR) data logo
EXTRA_DIST = vortex-1.1.pc.in VERSION libvortex.sln
pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = vortex-1.1.pc $(PULL_PKGCONFIG) $(TUNNEL_PKGCONFIG) $(XML_RPC_PKGCONFIG) $(SASL_PKGCONFIG) $(TLS_PKGCONFIG)
